# hypomnema

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  flake.nix  pyproject.toml  rust-toolchain.toml  solo.yml
.claude/skills/filesystem-watching/: SKILL.md
.claude/skills/markdown-chunking/: SKILL.md
.claude/skills/prd-generator/: SKILL.md
.claude/skills/rusqlite-in-async/: SKILL.md
.claude/skills/spec-generator/: SKILL.md
.claude/skills/sqlite-vec-extension/: SKILL.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
contrib/: changelog-hook
docs/: .lds-manifest.yaml  DOCUMENTATION-GUIDE.md  hypomnema-handoff.md  releasing-changelog.md
docs/architecture/: README.md  overview.md
docs/decisions/: 0000-template.md  0001-adopt-layered-documentation-system.md  0002-rust-over-python.md  0003-indexing-in-the-daemon.md  0004-three-search-modes-as-peers.md  0005-local-everything.md  0006-outbox-outside-watched-directory.md  0007-sqlite-vec-over-alternatives.md  0008-two-binary-daemon-plus-cli.md  0009-multi-vault-per-daemon.md  0010-vault-definitions-as-runtime-state.md  0011-vault-management-on-hmn.md  0012-mcp-transport-stdio-v0.md  0013-mcp-transport-streamable-http.md  README.md  _adr-policy.md
docs/implementation/: README.md  tech-stack.md
docs/maintenance/: audit.md  explore.md  refine.md  sync.md
docs/product/: README.md  vision.md
docs/reference/: README.md  cli.md  configuration.md
docs/roadmap/: roadmap-2.md  roadmap.md  step-01-workplan.md  step-02-workplan.md  step-03-workplan.md  step-04-workplan.md  step-05-workplan.md  step-06-workplan.md  step-07-workplan.md  step-08-workplan.md
docs/specs/: README.md  _template.md  change-events.md  ci-pipeline.md  content-retrieval.md  content-search.md  filesystem-search.md  health-endpoint.md  mcp-streamable-http.md  semantic-search.md  vault-ignores.md  vault-management.md
notes/: amp-code-review.md  backlog.md  coordinator-playbook.md  flaky-tests.md  lds-evaluation.md  mutagen-like-multiple-vault-shift.md  project-planning-workflow-notes.md  qmd-comparison.md  release-process.md
notes/manual-testing/: 00-setup.md  01-running-the-daemon.md  02-watcher-and-outbox.md  03-search.md  04-mcp.md  05-vault-management.md  06-mcp-http.md  07-content-get.md  README.md
notes/playbook/: README.md  agent-tool-selection.md  builder.md  capabilities.md  coordinator.md  orchestrator.md  researcher.md  shared-static.md
notes/proposals/: README.md  async-bootstrap-indexing-intake.md  async-bootstrap-indexing.md  backlog-hygiene-archival.md  content-retrieval-stories.md  fts5-bm25-content-search.md  hyde-semantic-search.md  intake-content-retrieval.md  intake-fts5-bm25-content-search.md  intake-hyde-semantic-search.md  intake-search-result-payload-budget.md  intake-static-sqlite-vec-bundling.md  search-result-payload-budget-stories.md  search-result-payload-budget.md  spec-generator-handoff.md  static-sqlite-vec-bundling.md
notes/roadmap/: README.md  roadmap-1.md  roadmap-10.md  roadmap-12.md  roadmap-13.md  roadmap-3.md  roadmap-4.md  roadmap-5.md  roadmap-8.md  roadmap-9.md  step-10-workplan.md  step-11-workplan.md  step-17-workplan.md  step-21-workplan.md  step-23-workplan.md  step-24-workplan.md
notes/vibe/: hypomnema-visual-identity.md  vibe-progress.md  vibe-template.md  vibe.md
scripts/: activate.sh  check-proposal-hygiene.sh  env.sh
src/: chunk.rs  cli.rs  client.rs  config.rs  embedding.rs  events.rs  legacy_state_migration.rs  lib.rs  logging.rs  shutdown.rs
src/api/: debug.rs  error.rs  health.rs  mcp_http.rs  mod.rs  search.rs  status.rs  tests.rs  types.rs  vaults.rs  watch.rs
src/control_plane/: manager.rs  mod.rs  runner.rs  tests.rs
src/hypomnema.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/indexer/: hash.rs  mod.rs  walk.rs
src/mcp/: backend.rs  backend_in_process.rs  mod.rs  server.rs
src/outbox/: event.rs  mod.rs  writer.rs
src/search/: content.rs  filesystem.rs  mod.rs  semantic.rs
src/store/: chunks.rs  mod.rs  pool.rs  schema.rs  sqlite_vec_init.rs
src/vault_registry/: mod.rs  schema.rs
src/watcher/: filter.rs  inclusion.rs  mod.rs  translate.rs  vcs_ignore.rs
tests/: change_events.rs  cli.rs  config.rs  content_get.rs  embedding.rs  http.rs  json_parity.rs  mcp.rs  mcp_http.rs  multi_vault_internal.rs  outbox.rs  scan.rs  semantic_smoke.rs  skeleton.rs  sqlite_vec_init.rs  vault_control_plane.rs  watch.rs
(+86 files in other folders)
