[package]
name = "hypomnema"
version = "0.1.0"
edition = "2024"

[lib]
# src/lib.rs — shared code for both binaries

[[bin]]
name = "hmnd"
path = "src/bin/hmnd.rs"

[[bin]]
name = "hmn"
path = "src/bin/hmn.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.7"
bytemuck = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4"
notify = "6"
notify-debouncer-full = "0.3"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
tower = "0.5"
