[package]
name = "hypomnema"
version = "0.5.0"
edition = "2024"

[lib]
# src/lib.rs — shared code for both binaries

[[bin]]
name = "hmnd"
path = "src/bin/hmnd.rs"

[[bin]]
name = "hmn"
path = "src/bin/hmn.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
bytemuck = "1"
futures-util = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
pulldown-cmark = { version = "0.13", default-features = false }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "stream"] }
rmcp = { version = "1.5", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
tokio = { version = "1.52.1", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
tower = "0.5"
